// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MatchExpression 1`] = `
{
  "block": {
    "caseEntries": [
      {
        "block": {
          "kind": "Block",
          "statements": [],
        },
        "guard": {
          "identifier": {
            "kind": "TypeIdentifier",
            "value": "King",
          },
          "kind": "NamedRecordLiteral",
          "recordLiteral": {
            "definitions": [],
            "kind": "RecordLiteral",
          },
        },
        "kind": "CaseEntry",
      },
    ],
    "kind": "BlockOfCases",
  },
  "expression": {
    "_meta": {
      "end": {
        "column": 12,
        "line": 1,
        "offset": 11,
      },
      "start": {
        "column": 8,
        "line": 1,
        "offset": 7,
      },
    },
    "kind": "ValueIdentifier",
    "value": "card",
  },
  "kind": "MatchExpression",
}
`;

exports[`MatchFunction 1`] = `
{
  "block": {
    "caseEntries": [],
    "kind": "BlockOfCases",
  },
  "identifier": {
    "_meta": {
      "end": {
        "column": 19,
        "line": 1,
        "offset": 18,
      },
      "start": {
        "column": 10,
        "line": 1,
        "offset": 9,
      },
    },
    "kind": "ValueIdentifier",
    "value": "printCard",
  },
  "kind": "MatchFunction",
  "matchType": {
    "definitions": [
      {
        "identifier": {
          "_meta": {
            "end": {
              "column": 33,
              "line": 1,
              "offset": 32,
            },
            "start": {
              "column": 29,
              "line": 1,
              "offset": 28,
            },
          },
          "kind": "ValueIdentifier",
          "value": "card",
        },
        "kind": "NamedDefinition",
        "typeTag": {
          "identifier": {
            "kind": "TypeIdentifier",
            "value": "Card",
          },
          "kind": "TypeTag",
        },
      },
    ],
    "kind": "RecordDefinition",
  },
}
`;

exports[`MatchFunction.cases 1`] = `
{
  "block": {
    "caseEntries": [
      {
        "block": {
          "kind": "Block",
          "statements": [],
        },
        "guard": {
          "identifier": {
            "kind": "TypeIdentifier",
            "value": "King",
          },
          "kind": "NamedRecordLiteral",
          "recordLiteral": {
            "definitions": [],
            "kind": "RecordLiteral",
          },
        },
        "kind": "CaseEntry",
      },
    ],
    "kind": "BlockOfCases",
  },
  "identifier": {
    "_meta": {
      "end": {
        "column": 19,
        "line": 1,
        "offset": 18,
      },
      "start": {
        "column": 10,
        "line": 1,
        "offset": 9,
      },
    },
    "kind": "ValueIdentifier",
    "value": "printCard",
  },
  "kind": "MatchFunction",
  "matchType": {
    "definitions": [
      {
        "identifier": {
          "_meta": {
            "end": {
              "column": 33,
              "line": 1,
              "offset": 32,
            },
            "start": {
              "column": 29,
              "line": 1,
              "offset": 28,
            },
          },
          "kind": "ValueIdentifier",
          "value": "card",
        },
        "kind": "NamedDefinition",
        "typeTag": {
          "identifier": {
            "kind": "TypeIdentifier",
            "value": "Card",
          },
          "kind": "TypeTag",
        },
      },
    ],
    "kind": "RecordDefinition",
  },
}
`;

exports[`MatchFunction.fullExample 1`] = `
{
  "block": {
    "caseEntries": [
      {
        "block": {
          "kind": "Block",
          "statements": [
            {
              "expression": {
                "kind": "StringLiteral",
                "value": "King",
              },
              "kind": "ReturnStatement",
            },
          ],
        },
        "guard": {
          "identifier": {
            "kind": "TypeIdentifier",
            "value": "King",
          },
          "kind": "NamedRecordLiteral",
          "recordLiteral": {
            "definitions": [],
            "kind": "RecordLiteral",
          },
        },
        "kind": "CaseEntry",
      },
      {
        "block": {
          "kind": "Block",
          "statements": [
            {
              "expression": {
                "kind": "StringLiteral",
                "value": "Queen",
              },
              "kind": "ReturnStatement",
            },
          ],
        },
        "guard": {
          "identifier": {
            "kind": "TypeIdentifier",
            "value": "Queen",
          },
          "kind": "NamedRecordLiteral",
          "recordLiteral": {
            "definitions": [],
            "kind": "RecordLiteral",
          },
        },
        "kind": "CaseEntry",
      },
      {
        "block": {
          "kind": "Block",
          "statements": [
            {
              "expression": {
                "kind": "StringLiteral",
                "value": "Jack",
              },
              "kind": "ReturnStatement",
            },
          ],
        },
        "guard": {
          "identifier": {
            "kind": "TypeIdentifier",
            "value": "Jack",
          },
          "kind": "NamedRecordLiteral",
          "recordLiteral": {
            "definitions": [],
            "kind": "RecordLiteral",
          },
        },
        "kind": "CaseEntry",
      },
      {
        "block": {
          "kind": "Block",
          "statements": [
            {
              "expression": {
                "kind": "StringLiteral",
                "value": "Number card",
              },
              "kind": "ReturnStatement",
            },
          ],
        },
        "guard": {
          "identifier": {
            "kind": "TypeIdentifier",
            "value": "Number",
          },
          "kind": "NamedRecordLiteral",
          "recordLiteral": {
            "definitions": [
              {
                "expression": {
                  "_meta": {
                    "end": {
                      "column": 33,
                      "line": 14,
                      "offset": 253,
                    },
                    "start": {
                      "column": 28,
                      "line": 14,
                      "offset": 248,
                    },
                  },
                  "kind": "ValueIdentifier",
                  "value": "value",
                },
                "identifier": {
                  "_meta": {
                    "end": {
                      "column": 26,
                      "line": 14,
                      "offset": 246,
                    },
                    "start": {
                      "column": 21,
                      "line": 14,
                      "offset": 241,
                    },
                  },
                  "kind": "ValueIdentifier",
                  "value": "value",
                },
                "kind": "NamedLiteral",
              },
            ],
            "kind": "RecordLiteral",
          },
        },
        "kind": "CaseEntry",
      },
    ],
    "kind": "BlockOfCases",
  },
  "identifier": {
    "_meta": {
      "end": {
        "column": 19,
        "line": 1,
        "offset": 18,
      },
      "start": {
        "column": 10,
        "line": 1,
        "offset": 9,
      },
    },
    "kind": "ValueIdentifier",
    "value": "printCard",
  },
  "kind": "MatchFunction",
  "matchType": {
    "definitions": [
      {
        "identifier": {
          "_meta": {
            "end": {
              "column": 33,
              "line": 1,
              "offset": 32,
            },
            "start": {
              "column": 29,
              "line": 1,
              "offset": 28,
            },
          },
          "kind": "ValueIdentifier",
          "value": "card",
        },
        "kind": "NamedDefinition",
        "typeTag": {
          "identifier": {
            "kind": "TypeIdentifier",
            "value": "Card",
          },
          "kind": "TypeTag",
        },
      },
    ],
    "kind": "RecordDefinition",
  },
}
`;

exports[`MatchFunction.fullExample 2`] = `
{
  "block": {
    "caseEntries": [
      {
        "block": {
          "kind": "Block",
          "statements": [
            {
              "expression": {
                "kind": "StringLiteral",
                "value": "King",
              },
              "kind": "ReturnStatement",
            },
          ],
        },
        "guard": {
          "identifier": {
            "kind": "TypeIdentifier",
            "value": "King",
          },
          "kind": "NamedRecordLiteral",
          "recordLiteral": {
            "definitions": [],
            "kind": "RecordLiteral",
          },
        },
        "kind": "CaseEntry",
      },
      {
        "block": {
          "kind": "Block",
          "statements": [
            {
              "expression": {
                "kind": "StringLiteral",
                "value": "Queen",
              },
              "kind": "ReturnStatement",
            },
          ],
        },
        "guard": {
          "identifier": {
            "kind": "TypeIdentifier",
            "value": "Queen",
          },
          "kind": "NamedRecordLiteral",
          "recordLiteral": {
            "definitions": [],
            "kind": "RecordLiteral",
          },
        },
        "kind": "CaseEntry",
      },
      {
        "block": {
          "kind": "Block",
          "statements": [
            {
              "expression": {
                "kind": "StringLiteral",
                "value": "Jack",
              },
              "kind": "ReturnStatement",
            },
          ],
        },
        "guard": {
          "identifier": {
            "kind": "TypeIdentifier",
            "value": "Jack",
          },
          "kind": "NamedRecordLiteral",
          "recordLiteral": {
            "definitions": [],
            "kind": "RecordLiteral",
          },
        },
        "kind": "CaseEntry",
      },
      {
        "block": {
          "kind": "Block",
          "statements": [
            {
              "expression": {
                "kind": "StringLiteral",
                "value": "Number card",
              },
              "kind": "ReturnStatement",
            },
          ],
        },
        "guard": {
          "identifier": {
            "kind": "TypeIdentifier",
            "value": "Number",
          },
          "kind": "NamedRecordLiteral",
          "recordLiteral": {
            "definitions": [
              {
                "expression": {
                  "_meta": {
                    "end": {
                      "column": 33,
                      "line": 14,
                      "offset": 226,
                    },
                    "start": {
                      "column": 28,
                      "line": 14,
                      "offset": 221,
                    },
                  },
                  "kind": "ValueIdentifier",
                  "value": "value",
                },
                "identifier": {
                  "_meta": {
                    "end": {
                      "column": 26,
                      "line": 14,
                      "offset": 219,
                    },
                    "start": {
                      "column": 21,
                      "line": 14,
                      "offset": 214,
                    },
                  },
                  "kind": "ValueIdentifier",
                  "value": "value",
                },
                "kind": "NamedLiteral",
              },
            ],
            "kind": "RecordLiteral",
          },
        },
        "kind": "CaseEntry",
      },
    ],
    "kind": "BlockOfCases",
  },
  "expression": {
    "_meta": {
      "end": {
        "column": 12,
        "line": 1,
        "offset": 11,
      },
      "start": {
        "column": 8,
        "line": 1,
        "offset": 7,
      },
    },
    "kind": "ValueIdentifier",
    "value": "card",
  },
  "kind": "MatchExpression",
}
`;

exports[`NamedRecordDefinition 1`] = `
{
  "block": {
    "kind": "Block",
    "statements": [],
  },
  "guard": {
    "definitions": [
      {
        "expression": {
          "identifier": {
            "kind": "TypeIdentifier",
            "value": "King",
          },
          "kind": "NamedRecordLiteral",
          "recordLiteral": {
            "definitions": [
              {
                "expression": {
                  "_meta": {
                    "end": {
                      "column": 30,
                      "line": 1,
                      "offset": 29,
                    },
                    "start": {
                      "column": 25,
                      "line": 1,
                      "offset": 24,
                    },
                  },
                  "kind": "ValueIdentifier",
                  "value": "value",
                },
                "identifier": {
                  "_meta": {
                    "end": {
                      "column": 23,
                      "line": 1,
                      "offset": 22,
                    },
                    "start": {
                      "column": 18,
                      "line": 1,
                      "offset": 17,
                    },
                  },
                  "kind": "ValueIdentifier",
                  "value": "value",
                },
                "kind": "NamedLiteral",
              },
            ],
            "kind": "RecordLiteral",
          },
        },
        "identifier": {
          "_meta": {
            "end": {
              "column": 11,
              "line": 1,
              "offset": 10,
            },
            "start": {
              "column": 7,
              "line": 1,
              "offset": 6,
            },
          },
          "kind": "ValueIdentifier",
          "value": "card",
        },
        "kind": "NamedLiteral",
      },
    ],
    "kind": "RecordLiteral",
  },
  "kind": "CaseEntry",
}
`;
